# legate-raft

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  build.sh  dependencies.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: conda-python-build.yaml  docs-build.yaml  pr.yaml
ci/: build_docs.sh  build_python.sh  run_pytests.sh  test_python.sh  test_python_common.sh
cmake/legate_raft/: generate_install_info.cmake
conda/environments/: all_cuda-125_arch-x86_64.yaml
conda/recipes/legate-raft/: build.sh  conda_build_config.yaml  meta.yaml
cpp/: .clang-format
cpp/src/: CMakeLists.txt  legate_library.cc  legate_library.h  legate_raft.h  legate_raft_cffi.h  mapper.cc  mapper.h
cpp/src/common/: gpu_task_context.cu  gpu_task_context.hpp  utils.hpp
cpp/src/raft/: distance.cu  histogram.cu  kmeans_mnmg_impl.cuh  raft_api.hpp  raft_kmeans.cu  raft_kmeans_api.hpp
cpp/src/task/: add.cu  add_constant.cu  argmax.cu  bincount.cu  categorize.cc  compute_1nn.cc  convert.cu  copy.cu  count_features.cu  divide_by_constant.cu  exp.cc  fill.cu  find_max.cc  hashing_vectorizer.cu  histogram.cc  invert_labels.cu  kmeans_tasks.cu  knn_task.cu  log.cu  make_blobs.cu  make_rmat.cu  map_labels.cu  matmul.cc  mul.cc  multiply_by_constant.cu  naive_bayes.cu  pitches.h  power.cu  range.cc  rng.cu  sparse_coo_mm.cu  sum_over_axis.cu  tfidf.cu  unique.cu
docs/source/: CONTRIBUTING.md  conf.py  index.rst
docs/source/api/: feature_extraction.rst  index.rst  kmeans.rst  knn.rst  naive_bayes.rst
legate_raft/: __init__.py  array_api.py  cffi.py  core.py  hashing_vectorizer.py  knn.py  library.py  multiarray.py  naive_bayes.py  prims.py  special.py  utils.py
legate_raft/benchmarks/: benchmark_make_rmat.py  benchmark_naive_bayes.py  benchmark_tfidf.py  util.py
legate_raft/random/: __init__.py  make_blobs.py  make_docs.py  make_rmat.py  rng.py
legate_raft/sklearn/cluster/: __init__.py  kmeans.py
legate_raft/sklearn/feature_extraction/: __init__.py  text.py
legate_raft/sklearn/naive_bayes/: __init__.py  conftest.py  multinomial.py
legate_raft/sparse/: __init__.py  api.py  tfidf.py
legate_raft/test/: test_api.py  test_hv.py  test_kmeans.py  test_knn.py  test_make_rmat.py  test_naive_bayes.py  test_rng.py  test_tfidf.py  test_version.py
thirparty/LICENSES/: LICENSE.scikit_learn
