# Copyright (c) 2023, NVIDIA CORPORATION.
# SPDX-License-Identifier: Apache-2.0

[versioneer]
VCS = git
style = pep440
tag_prefix = v

[flake8]
max-line-length = 88
extend-ignore = E203,E721

[isort]
profile = black

[options]
packages = find:
install_requires =
    numpy>=1.22
    # TODO: Add rest of install dependencies
python_requires = >=3.9,!=3.9.7
